--- a/doc/HappyDB_RShiny.Rmd
+++ b/doc/HappyDB_RShiny.Rmd
@@ -41,8 +41,8 @@ We use the processed data for our analysis and combine it with the demographic i
 ```{r load data, warning=FALSE, message=FALSE}
 hm_data <- read_csv("../output/processed_moments.csv")
 
-urlfile<-'https://raw.githubusercontent.com/rit-public/HappyDB/master/happydb/data/demographic.csv'
-demo_data <- read_csv(urlfile)
+urlfile<-"../data/demographic.csv"
+demo_data <- read_csv(urlfile)                                                                
 ```
 
 ### Combine both the data sets and keep the required columns for analysis
