--- a/doc/Text_Processing.Rmd
+++ b/doc/Text_Processing.Rmd
@@ -2,6 +2,7 @@
 title: "Stem Completion"
 author: "Arpita Shah and Tian Zheng"
 output:
+  pdf_document: default
   html_document:
     df_print: paged
 ---
@@ -33,7 +34,7 @@ library(DT)
 ### Step 1 - Load the data to be cleaned and processed
 
 ```{r read data, warning=FALSE, message=FALSE}
-urlfile<-'https://raw.githubusercontent.com/rit-public/HappyDB/master/happydb/data/cleaned_hm.csv'
+urlfile<-"../data/cleaned_hm.csv"
 hm_data <- read_csv(urlfile)
 ```
 
